# sakura-fare

./: .gitignore  README.md  pyproject.toml  searxng-settings.example.yml
app/: main.py
app/agent/: client.py  loop.py  meals.py  pipeline.py  prompts.py  research.py  tools.py
app/api/: routes.py  schemas.py
app/core/: bootstrap.py  config.py
app/data/: fares.json  food.json  places.json
app/services/: documents.py  fares.py  geocode.py  gmaps_fares.py  jobs.py  places.py  search.py
frontend/: app.js  index.html  styles.css
samples/: japan-trip.md
scripts/: make_sample_pdf.py  searxng.sh
tests/: test_gmaps_fares.py  test_normalize_curated.py
