[project]
name = "sakura-fare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
